2007-06-02  George Giolfan  <georgegiolfan@yahoo.com>

	* luna.normalcolor.xaml: Added TabControl style.