@@ -1,3 +1,7 @@
+2007-06-11  George Giolfan  <georgegiolfan@yahoo.com>
+
+	* luna.normalcolor.xaml: Added TabItem style.
+	
 2007-06-02  George Giolfan  <georgegiolfan@yahoo.com>
 
 	* luna.normalcolor.xaml: Added TabControl style.
